centre menu fix on IE

--- a/web/app/themes/rizikove_kaceni_sage_based/assets/styles/common/_overrides.scss
+++ b/web/app/themes/rizikove_kaceni_sage_based/assets/styles/common/_overrides.scss
@@ -11,5 +11,5 @@
 }
 
 .navbar-nav{
-  margin-top: 0;
+  //margin-top: 0;
 }
