--- a/web/app/themes/rizikove_kaceni_sage_based/assets/styles/layouts/_navigation.scss
+++ b/web/app/themes/rizikove_kaceni_sage_based/assets/styles/layouts/_navigation.scss
@@ -1,5 +1,6 @@
 .menu-center{
   width: 100%;
+  text-align: ce;
 }
 
 .navbar{
@@ -73,6 +74,7 @@
 
     @include modular-mq(desktop){
       width: 1030px;
+      float: none;
 
       .de & {
         width: 1100px;
